JUnit added and readme changes